--- a/argocd/apps/staging/loki.yaml
+++ b/argocd/apps/staging/loki.yaml
@@ -1,4 +1,3 @@
-# Update argocd/apps/staging/loki.yaml
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -9,17 +8,27 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://grafana.github.io/helm-charts
     chart: loki
+    repoURL: https://grafana.github.io/helm-charts
     targetRevision: 6.35.1
     helm:
       values: |
+        # Single binary deployment for staging
         deploymentMode: SingleBinary
         
         loki:
           auth_enabled: false
+          commonConfig:
+            replication_factor: 1
+          limits_config:
+            retention_period: 72h
+            ingestion_rate_mb: 8
+            ingestion_burst_size_mb: 16
           storage:
             type: filesystem
+            filesystem:
+              chunks_directory: /var/loki/chunks
+              rules_directory: /var/loki/rules
           schemaConfig:
             configs:
               - from: 2020-10-24
@@ -30,11 +39,9 @@ spec:
                   prefix: index_
                   period: 24h
         
+        # Single binary configuration
         singleBinary:
-          persistence:
-            enabled: true
-            storageClass: "local-path"
-            size: 5Gi
+          replicas: 1
           resources:
             requests:
               cpu: 50m
@@ -42,13 +49,36 @@ spec:
             limits:
               cpu: 200m
               memory: 256Mi
+          persistence:
+            enabled: true
+            size: 5Gi
+            storageClass: "local-path"
+          affinity: {}
         
+        # Explicitly disable distributed components
         read:
-          replicas: 0
-        backend:
           replicas: 0
         write:
           replicas: 0
+        backend:
+          replicas: 0
+        
+        # Disable optional components for staging
+        gateway:
+          enabled: false
+        chunksCache:
+          enabled: false
+        resultsCache:
+          enabled: false
+        
+        # Disable monitoring components for simplicity
+        monitoring:
+          lokiCanary:
+            enabled: false
+        
+        # Disable test pods
+        test:
+          enabled: false
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
