--- a/charts/applications/velero/templates/bucket-init-job.yaml
+++ b/charts/applications/velero/templates/bucket-init-job.yaml
@@ -7,8 +7,8 @@ metadata:
   labels:
     {{- include "velero.labels" . | nindent 4 }}
   annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
-    "helm.sh/hook-weight": "-5"
+    "helm.sh/hook": post-install,post-upgrade
+    "helm.sh/hook-weight": "5"
     "helm.sh/hook-delete-policy": hook-succeeded
 spec:
   template:
