--- a/argocd/apps/production/loki.yaml
+++ b/argocd/apps/production/loki.yaml
@@ -3,26 +3,23 @@ kind: Application
 metadata:
   name: loki-production
   namespace: argocd
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
-    repoURL: git@github.com:brianjlehnen/homelab-gitops.git
-    targetRevision: main
-    path: charts/applications/loki
+    repoURL: 'https://grafana.github.io/helm-charts'
+    targetRevision: 6.35.1
+    chart: loki
     helm:
-      valueFiles:
-        - values.yaml
       values: |
-        # Production deployment with microservices architecture
-        deploymentMode: Distributed
-        
+        # Single binary deployment for production
+        deploymentMode: SingleBinary
+
         loki:
+          auth_enabled: false
           commonConfig:
-            replication_factor: 2
+            replication_factor: 1
           limits_config:
-            retention_period: 7d
+            retention_period: 168h  # 7 days for production
             ingestion_rate_mb: 16
             ingestion_burst_size_mb: 32
           storage:
@@ -30,150 +27,59 @@ spec:
             filesystem:
               chunks_directory: /var/loki/chunks
               rules_directory: /var/loki/rules
-        
-        # Write path components
-        write:
-          replicas: 2
+          schemaConfig:
+            configs:
+              - from: 2020-10-24
+                store: tsdb
+                object_store: filesystem
+                schema: v13
+                index:
+                  prefix: index_
+                  period: 24h
+
+        # Production configuration
+        singleBinary:
+          replicas: 1
           resources:
             requests:
-              cpu: 200m
-              memory: 512Mi
+              cpu: 100m
+              memory: 256Mi
             limits:
-              cpu: 1000m
-              memory: 1Gi
+              cpu: 500m
+              memory: 512Mi
           persistence:
             enabled: true
-            size: 20Gi
-            storageClass: "nfs-client"
-          affinity:
-            podAntiAffinity:
-              preferredDuringSchedulingIgnoredDuringExecution:
-                - weight: 100
-                  podAffinityTerm:
-                    labelSelector:
-                      matchLabels:
-                        app.kubernetes.io/component: write
-                    topologyKey: kubernetes.io/hostname
-        
-        # Read path components
+            size: 10Gi
+            storageClass: "nfs-logs"
+
+        # Disable distributed components
         read:
-          replicas: 2
-          resources:
-            requests:
-              cpu: 200m
-              memory: 512Mi
-            limits:
-              cpu: 1000m
-              memory: 1Gi
-          persistence:
-            enabled: true
-            size: 10Gi
-            storageClass: "nfs-client"
-          affinity:
-            podAntiAffinity:
-              preferredDuringSchedulingIgnoredDuringExecution:
-                - weight: 100
-                  podAffinityTerm:
-                    labelSelector:
-                      matchLabels:
-                        app.kubernetes.io/component: read
-                    topologyKey: kubernetes.io/hostname
-        
-        # Backend components
+          replicas: 0
+        write:
+          replicas: 0
         backend:
-          replicas: 1
-          resources:
-            requests:
-              cpu: 100m
-              memory: 256Mi
-            limits:
-              cpu: 500m
-              memory: 512Mi
-          persistence:
-            enabled: true
-            size: 10Gi
-            storageClass: "nfs-client"
-        
-        # Gateway for load balancing
+          replicas: 0
+
         gateway:
-          enabled: true
-          replicas: 2
-          resources:
-            requests:
-              cpu: 100m
-              memory: 128Mi
-            limits:
-              cpu: 200m
-              memory: 256Mi
-          affinity:
-            podAntiAffinity:
-              preferredDuringSchedulingIgnoredDuringExecution:
-                - weight: 100
-                  podAffinityTerm:
-                    labelSelector:
-                      matchLabels:
-                        app.kubernetes.io/component: gateway
-                    topologyKey: kubernetes.io/hostname
-          service:
-            type: ClusterIP
-        
-        # Production caching for performance
+          enabled: false
         chunksCache:
-          enabled: true
-          replicas: 1
-          resources:
-            requests:
-              cpu: 100m
-              memory: 256Mi
-            limits:
-              cpu: 500m
-              memory: 512Mi
-        
+          enabled: false
         resultsCache:
-          enabled: true
-          replicas: 1
-          resources:
-            requests:
-              cpu: 50m
-              memory: 128Mi
-            limits:
-              cpu: 200m
-              memory: 256Mi
-        
-        # Production monitoring
+          enabled: false
+
         monitoring:
           lokiCanary:
-            enabled: true
-            resources:
-              requests:
-                cpu: 25m
-                memory: 32Mi
-              limits:
-                cpu: 100m
-                memory: 64Mi
-        
-        # ServiceMonitor for Prometheus scraping
-        serviceMonitor:
-          enabled: true
-          namespace: monitoring
-          labels:
-            app: loki
-          interval: 30s
-        
-        # Node preferences for high-memory workloads
-        nodeSelector:
-          # Prefer nodes with more memory for Loki components
-        
-        # Test configuration
+            enabled: false
+
         test:
-          enabled: true
+          enabled: false
   destination:
-    server: https://kubernetes.default.svc
+    server: 'https://kubernetes.default.svc'
     namespace: logging
   syncPolicy:
     automated:
-      prune: false
-      selfHeal: false
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
