--- a/charts/applications/promtail/values.yaml
+++ b/charts/applications/promtail/values.yaml
@@ -2,7 +2,7 @@
 promtail:
   config:
     clients:
-      - url: http://loki-production.monitoring.svc.cluster.local:3100/loki/api/v1/push
+      - url: http://loki-production.logging.svc.cluster.local:3100/loki/api/v1/push
     
     scrape_configs:
       - job_name: kubernetes-pods
