fix(loki-external): update selector to target single-binary component
- Add app.kubernetes.io/component: single-binary to selector
- Matches main Loki service selector exactly
- Prevents targeting canary pods
- Ensures NodePort routes to correct Loki instance

Fixes: External service targeting multiple pod types

--- a/charts/infrastructure/loki-external/templates/external-service.yaml
+++ b/charts/infrastructure/loki-external/templates/external-service.yaml
@@ -20,6 +20,7 @@ spec:
       protocol: TCP
       nodePort: 31000
   selector:
-    app.kubernetes.io/name: loki
+    app.kubernetes.io/component: single-binary
     app.kubernetes.io/instance: loki-production
+    app.kubernetes.io/name: loki
 {{- end }}
