--- a/argocd/apps/production/homepage.yaml
+++ b/argocd/apps/production/homepage.yaml
@@ -12,25 +12,25 @@ spec:
     targetRevision: main
     path: charts/applications/homepage
     helm:
+      valueFiles:
+        - values.yaml
       values: |
         replicaCount: 2
-        
         ingress:
           enabled: true
           className: nginx
           annotations:
             nginx.ingress.kubernetes.io/ssl-redirect: "true"
-            cert-manager.io/cluster-issuer: "letsencrypt-prod-gitops"  # Use new ClusterIssuer
+            cert-manager.io/cluster-issuer: "letsencrypt-prod-gitops"
           hosts:
             - host: homepage.lab1830.com
               paths:
                 - path: /
                   pathType: Prefix
           tls:
-            - secretName: homepage-tls-gitops  # Different secret name for safety
+            - secretName: homepage-tls-gitops
               hosts:
                 - homepage.lab1830.com
-        
         resources:
           requests:
             cpu: 50m
