fix(security): correct path for wiz-external-secrets application

--- a/argocd/apps/staging/wiz-external-secrets.yaml
+++ b/argocd/apps/staging/wiz-external-secrets.yaml
@@ -14,7 +14,7 @@ spec:
   project: default
   source:
     repoURL: git@github.com:brianjlehnen/homelab-gitops.git
-    path: apps/base/wiz
+    path: argocd/apps/base/wiz
     targetRevision: staging
   destination:
     server: https://kubernetes.default.svc
