fix(security): correct Vault server URL for certificate match

--- a/argocd/apps/base/wiz/vault-secretstore.yaml
+++ b/argocd/apps/base/wiz/vault-secretstore.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "https://vault-staging.lab1830.com"
+      server: "https://ingress.local"
       path: "secret"
       version: "v2"
       auth:
