fix(security): use internal Kubernetes service for Vault connection

--- a/argocd/apps/base/wiz/vault-secretstore.yaml
+++ b/argocd/apps/base/wiz/vault-secretstore.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "https://ingress.local"
+      server: "http://vault-staging.vault-staging.svc.cluster.local:8200"
       path: "secret"
       version: "v2"
       auth:
