fix: use correct vault-k8s injector version 1.4.0

--- a/charts/applications/vault/values/staging.yaml
+++ b/charts/applications/vault/values/staging.yaml
@@ -1,15 +1,15 @@
-# Staging Vault - Development mode with simplified configuration
+# Staging Vault - Development mode with CVE-2025-6000 fix
 vault:
   global:
     enabled: true
-    tlsDisable: true # Simplified TLS for staging
+    tlsDisable: true
   
-  # Injector for secret injection into pods
   injector:
     enabled: true
     replicas: 1
     image:
-      tag: "1.20.1"  # CVE-2025-6000 patched version
+      repository: hashicorp/vault-k8s
+      tag: "1.4.0"  # Stable vault-k8s version (different from Vault server)
     resources:
       requests:
         memory: "64Mi"
@@ -18,25 +18,22 @@ vault:
         memory: "128Mi"
         cpu: "50m"
   
-  # Server configuration
   server:
-    # CVE-2025-6000 Security Fix
     image:
-      tag: "1.20.1"  # Explicit secure version
+      repository: hashicorp/vault
+      tag: "1.20.1"  # CRITICAL: CVE-2025-6000 patched version
     
-    # Development mode for easy staging setup
     dev:
       enabled: true
       devRootToken: "staging-root-token-12345"
       devListenAddress: "0.0.0.0:8200"
     
-    # IMPORTANT: Disable these when dev mode is enabled
     ha:
       enabled: false
-    standalone:
-      enabled: false # Must be false for dev mode
     
-    # Resources appropriate for staging
+    standalone:
+      enabled: false
+    
     resources:
       requests:
         memory: "256Mi"
@@ -45,22 +42,18 @@ vault:
         memory: "512Mi"
         cpu: "200m"
     
-    # Security hardening - ensure no plugin directory
     extraEnvironmentVars:
       VAULT_DISABLE_MLOCK: true
     
-    # IMPORTANT: Disable storage in dev mode (runs in-memory)
     dataStorage:
-      enabled: false # Must be false for dev mode
+      enabled: false
     
-    # Service configuration
     service:
       enabled: true
       type: ClusterIP
       port: 8200
       targetPort: 8200
     
-    # Staging ingress configuration
     ingress:
       enabled: true
       ingressClassName: nginx
@@ -70,10 +63,8 @@ vault:
         - host: vault-staging.lab1830.com
           paths:
             - "/"
-      # Remove TLS for staging simplicity
       tls: []
   
-  # UI configuration
   ui:
     enabled: true
     serviceType: "ClusterIP"
