fix(security): disable ESO ServiceMonitor to resolve sync timeout

--- a/argocd/apps/production/external-secrets.yaml
+++ b/argocd/apps/production/external-secrets.yaml
@@ -29,10 +29,18 @@ spec:
             limits:
               cpu: 200m
               memory: 256Mi
+        certController:
+          resources:
+            requests:
+              cpu: 50m
+              memory: 64Mi
+            limits:
+              cpu: 200m
+              memory: 256Mi
         replicaCount: 2
+        # Disable ServiceMonitor for now
         serviceMonitor:
-          enabled: true
-          namespace: monitoring
+          enabled: false
   destination:
     server: https://kubernetes.default.svc
     namespace: external-secrets
