--- a/charts/applications/wiz-outpost-lite/templates/external-secrets.yaml
+++ b/charts/applications/wiz-outpost-lite/templates/external-secrets.yaml
@@ -8,9 +8,10 @@ metadata:
 spec:
   provider:
     vault:
-      server: "https://vault.lab1830.com"
+      server: "https://vault.vault.svc.cluster.local:8200"
       path: "secret"
       version: "v2"
+      caBundle: ""  # Add if using self-signed certificates
       auth:
         kubernetes:
           mountPath: "kubernetes"
@@ -30,7 +31,7 @@ spec:
     name: vault-secret-store
     kind: SecretStore
   target:
-    name: wiz-outpost-lite-credentials
+    name: outpost-lite-agent-creds
     creationPolicy: Owner
   data:
     - secretKey: clientId
@@ -45,26 +46,6 @@ spec:
       remoteRef:
         key: secret/wiz-outpost/credentials
         property: outpostId
----
-# Encryption private key from Vault
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: wiz-outpost-lite-encryption
-  namespace: outpost-lite
-spec:
-  refreshInterval: {{ .Values.externalSecrets.refreshInterval }}
-  secretStoreRef:
-    name: vault-secret-store
-    kind: SecretStore
-  target:
-    name: wiz-outpost-lite-encryption
-    creationPolicy: Owner
-  data:
-    - secretKey: privateKey
-      remoteRef:
-        key: secret/wiz-outpost/encryption
-        property: privateKey
 ---
 # Docker registry secret from Vault
 apiVersion: external-secrets.io/v1beta1
